Less, added Blog ans Social navigation. Footer positioning

--- a/Index.html
+++ b/Index.html
@@ -3,21 +3,15 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to Arrow Photography</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+<link href="assets/css/styles.css" rel="stylesheet" />
 
-    <style>
-        section h3+p{
-            font-style: italic;
-            font-weight: bold;
-            color:#0000FF;
-        }
-    </style>
 </head>
 <body>
+<div id="page" class="container">
     <header>
         <h1>Arrow Photography</h1>
         <nav>
-            <ul class="nav">
+            <ul>
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio/index.html">Portfolio</a></li>
@@ -25,80 +19,82 @@
                 <li><a href="news.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            </nav>
+        </nav>
     </header>
       <div id="content">
-          <p>
-              <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
-         <p>
-                <section class="first">
-                    <h2>Welcome to Arrow Photography</h2>
-                <p>
-                <img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photography" /></p>
-        <p>The 2 important parts to capturing a photograph - &ndash; &mdash; the subject and the location.
-           At <strong>Arrow Photography</strong> we know how to emphasise the best in both!
-        </p>
-    <p><img src="assets/images/ArrowPhotograhyFrontPage2.jpg" alt="Wedding Photography" /></p>
-    <p><img src="assets/images/ArrowPhotograhyFrontPage3.jpg" alt="Wedding Photography" /></p>
-    <p><img src="assets/images/ArrowPhotograhyFrontPage4.jpg" alt="Wedding Photography" /></p>
-    <p><img src="assets/images/ArrowPhotograhyFrontPage5.jpg" alt="Wedding Photography" /></p>
-        <p>We have been professional photographers for 15 years, specialising
-           in <strong>modern and stylish wedding photography</strong>. You will want photographs
-           of people or event that are creative, romantic and artistically taken...
-           which is why we leave nothing to chance and photograph everything that
-           is magical just as you wish it to be. Your photographs will be something
-           that you, your families and friends will treasure forever.
-        </p>
-        <p>Our style is <em>friendly and relaxed</em> enabling us to capture all those special
+        <section class="first">
+
+            <p><img src="assets/images/ArrowPhotograhyFrontPage1.jpg" alt="Wedding Photo"/></p>
+            <h2>Welcome to Arrow Photography</h2>
+            <p>
+                The 2 important parts to capturing a photograph - &ndash; &mdash; the subject and the location.
+                At <strong>Arrow Photography</strong> we know how to emphasise the best in both!
+            </p>
+            <p>
+                We have been professional photographers for 15 years, specialising
+                in <strong>modern and stylish wedding photography</strong>. You will want photographs
+                of people or event that are creative, romantic and artistically taken...
+                which is why we leave nothing to chance and photograph everything that
+                is magical just as you wish it to be. Your photographs will be something
+                that you, your families and friends will treasure forever.
+            </p>
+            <p>
+                Our style is <em>friendly and relaxed</em> enabling us to capture all those special
                 moments throughout the day with the minimum of fuss.
-        </p>
-          </section>
-             <div>
-    <section class="second">
-        <h2>Recent Events</h2>
-    <div class=" first subsection">
-        <h3>Adele and John's Wedding</h3>
-        <p>Adele and John's Wedding Adele and John wanted some wedding photos of
-            just themselves around Sydney Harbour with the <em>Sydney Opera House,
-            Botanical Gardens</em> and <em>Sydney Harbour Bridge</em> as the backdrop.
-            We met up with them one sunny afternoon on the Sydney Opera House
-            steps and spent some time capturing some greats shots of them both
-            in these awe-inspiring locations. After shooting in front of the
-            <em>Opera House and Bridge</em>, we walked into <em>Sydney's Botanical Gardens</em>
-            with the city behind them and captured some great natural moments
-            between the two of them. After a glass or two of Champagne, we
-            wandered through the gardens to <em>Mrs Macquaries Point</em> and
-            photographed the bride and groom with the iconic <em>Opera House</em> and
-            <em>Harbour Bridge</em> behind them.
-        </p>
-    <p>More&hellip;
-    </p>
-</div>
-    <div class="second subsection">
-            <h3>Jane and Richard's Wedding</h3>
-    <p>Jane and Richard's Wedding &ldquo; Jane and Richard's &rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
-        and the wedding reception took place at<em>the Mercure Parkway Hotel Leeds</em>. All the groomsmen
-        were in kilts as the groom is Scottish and there was definitely a Scottish theme to the day.
-        After the ceremony we were lucky enough for some sunshine to come out just at the right moment
-        so the bride and groom could have the roof down on the wedding car. We worked quickly in the
-        short time we had sun to capture some great photos of the bride and groom through the trees
-        with the sunshine behind outside <em>the Mercure Parkway Hotel</em>. The wedding speeches had everyone
-        in stitches as the best man had prepared a slideshow of photos from the stag do!
-    </p>
-    <p>More &hellip;
-    </p>
-                </div>
-    </section>
-        </div>
+            </p>
+        </section>
+        <section class="second">
+            <h2>Recent Events</h2>
+            <div class=" first subsection">
+                <h3>Adele and John's Wedding</h3>
+                <p>
+                    <img src="portfolio/weddings/AdeleandJohn/images/AdeleandJohnWedding1.jpg" alt="Wedding Photo"/>
+                </p>
+                <p>
+                    Adele and John's Wedding Adele and John wanted some wedding photos of
+                    just themselves around Sydney Harbour with the <em>Sydney Opera House,
+                    Botanical Gardens</em> and <em>Sydney Harbour Bridge</em> as the backdrop.
+                    We met up with them one sunny afternoon on the Sydney Opera House
+                    steps and spent some time capturing some greats shots of them both
+                    in these awe-inspiring locations. After shooting in front of the
+                    <em>Opera House and Bridge</em>, we walked into <em>Sydney's Botanical Gardens</em>
+                    with the city behind them and captured some great natural moments
+                    between the two of them. After a glass or two of Champagne, we
+                    wandered through the gardens to <em>Mrs Macquaries Point</em> and
+                    photographed the bride and groom with the iconic <em>Opera House</em> and
+                    <em>Harbour Bridge</em> behind them.
+                </p>
+                <p>More&hellip;</p>
             </div>
-    </section>
-        <footer>
+            <div class="second subsection">
+                <h3>Jane and Richard's Wedding</h3>
+                <p><img src="portfolio/weddings/JaneandRichard/images/JanandRichardWedding1.jpg" alt="Wedding Photo"/></p>
+                <p>
+                    Jane and Richard's Wedding &ldquo; Jane and Richard's &rdquo; wedding was at <em>St. Wilfrid's Church, Calverley</em>
+                    and the wedding reception took place at<em>the Mercure Parkway Hotel Leeds</em>. All the groomsmen
+                    were in kilts as the groom is Scottish and there was definitely a Scottish theme to the day.
+                    After the ceremony we were lucky enough for some sunshine to come out just at the right moment
+                    so the bride and groom could have the roof down on the wedding car. We worked quickly in the
+                    short time we had sun to capture some great photos of the bride and groom through the trees
+                    with the sunshine behind outside <em>the Mercure Parkway Hotel</em>. The wedding speeches had everyone
+                    in stitches as the best man had prepared a slideshow of photos from the stag do!
+                </p>
+                <p>More &hellip;</p>
+            </div>
+        </section>
+      </div>
+      <footer>
             <nav>
             <ul class="nav">
             <li><a href="general/terms.html">Terms &amp; Conditions</a></li>
             <li><a href="general/faq.html"><abbr title="Frequently Asked Questions">FAQ</abbr></a></li>
         </ul>
+                <ul>
+               <li> <a href="http://arrowmedia.wordpress.com/">Blog</a></li>
+                <li> <a href="http://twitter.com/arrowmedia">Social</a></li>
+                </ul>
                 </nav>
             </footer>
+</div>
 </body>
 </html>
